# Kirkforge_Cli

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  build.rs  config.toml.example  state.md
benches/: first_token_latency.rs  startup.rs
crates/kirkforge-context-index/: Cargo.toml
crates/kirkforge-context-index/src/: lib.rs
crates/kirkforge-draw/: Cargo.toml
crates/kirkforge-draw-core/: Cargo.toml
crates/kirkforge-draw-core/src/: doc.rs  find.rs  geometry.rs  inspector.rs  layers.rs  lib.rs  line.rs  object.rs  palette.rs  render_text.rs  scene.rs  state.rs  text_util.rs  types.rs
crates/kirkforge-draw-core/tests/: render_snapshots.rs
crates/kirkforge-draw/src/: app.rs  event.rs  main.rs  render.rs  scene_render.rs  tui.rs  ui.rs
crates/kirkforge-lsp/: Cargo.toml
crates/kirkforge-lsp/src/: lib.rs
crates/kirkforge-plugin/: Cargo.toml
crates/kirkforge-plugin-host/: Cargo.toml
crates/kirkforge-plugin-host/src/: compat.rs  env.rs  hook.rs  lib.rs  paths.rs  sandbox.rs  tool.rs  toolset.rs  verifier.rs
crates/kirkforge-plugin-host/tests/: load_bundled_plugins.rs
crates/kirkforge-plugin/src/: lib.rs
crates/kirkforge-testdoctor/: Cargo.toml
crates/kirkforge-testdoctor/src/: classify.rs  main.rs  partition.rs  profile.rs  suggest.rs
crates/kirkforge-video/: ADR-001-kirkforge-video-architecture.md  Cargo.toml  README.md
crates/kirkforge-video/examples/: brief-code-to-screen.md  brief-world-in-numbers.md  dump_showcase.rs  inspect_callout.rs  inspect_callout_chain.rs  inspect_charts.rs  inspect_one.rs  inspect_pair.rs  inspect_silent.rs  render_demo.rs  term_only.rs
crates/kirkforge-video/projects/asset-demo/artifacts/: asset_manifest.json  composition.json  decision_log.jsonl  edit_decisions.json  proposal_packet.json  scene_plan.json
crates/kirkforge-video/projects/asset-demo/checkpoints/: animated_explainer.json
crates/kirkforge-video/projects/audio-demo/artifacts/: composition.json  proposal_packet.json  scene_plan.json
crates/kirkforge-video/projects/audio-demo/checkpoints/: animated_explainer.json
crates/kirkforge-video/projects/brief-demo/: brief.txt
crates/kirkforge-video/projects/brief-demo/artifacts/: composition.json  edit_decisions.json  research_brief.json  risk_report.json  scene_plan.json
crates/kirkforge-video/projects/brief-demo/checkpoints/: animated_explainer.json
crates/kirkforge-video/projects/clip-probe/: brief.txt
crates/kirkforge-video/projects/clip-probe/artifacts/: asset_manifest.json  composition.json  decision_log.jsonl  edit_decisions.json  risk_report.json  scene_plan.json
crates/kirkforge-video/projects/clip-probe/checkpoints/: animated_explainer.json
crates/kirkforge-video/projects/demo/artifacts/: asset_manifest.json  composition.json  decision_log.jsonl  scene_plan.json
crates/kirkforge-video/projects/demo/checkpoints/: animated_explainer.json
crates/kirkforge-video/projects/focusflow/: brief.txt
crates/kirkforge-video/src/: demos.rs  error.rs  lib.rs  main.rs
crates/kirkforge-video/src/compose/: brand.rs  filter_graph.rs  media_profiles.rs  mod.rs  render.rs
crates/kirkforge-video/src/orchestrator/: checkpoint.rs  decision.rs  mod.rs  promise.rs  slideshow_risk.rs  variation_checker.rs
crates/kirkforge-video/src/pipelines/: animated_explainer.rs  brief.rs  cinematic.rs  mod.rs  screen_demo.rs
crates/kirkforge-video/src/tools/: analysis.rs  audio.rs  doctor.rs  enhancement.rs  mod.rs  providers.rs  transcoder.rs  video.rs
crates/kirkforge-video/tests/: integration.rs
crates/kirkforge-workflow/: Cargo.toml
crates/kirkforge-workflow/src/: lib.rs
crates/kirkforge-workflow/templates/: bugfix.json  feature.json  refactor.json
crates/kirkstratum-cli/: Cargo.toml
crates/kirkstratum-cli/src/: cli.rs  config_source.rs  init.rs  input.rs  main.rs  mode.rs  output.rs  report.rs  stdout.rs
crates/kirkstratum-cli/tests/: integration.rs
crates/kirkstratum-core/: Cargo.toml  build.rs
crates/kirkstratum-core/benches/: compression.rs
crates/kirkstratum-core/config/: pipeline.toml
crates/kirkstratum-core/examples/: library_usage.rs
crates/kirkstratum-core/src/: config.rs  content.rs  lib.rs  mode.rs  pipeline.rs  store.rs
crates/kirkstratum-core/tests/: negative_corpus.rs  property.rs
crates/kirkstratum-hosts/: Cargo.toml  build.rs
crates/kirkstratum-hosts/docs/rules/: CANONICAL.md
crates/kirkstratum-hosts/src/: lib.rs  rules.rs
crates/plugin3-cli/: Cargo.toml
crates/plugin3-cli/src/: exit.rs  json_out.rs  main.rs  precedence.rs
crates/plugin3-cli/src/commands/: budget.rs  config.rs  init.rs  mod.rs  report.rs  store.rs
crates/plugin3-cli/src/hooks/: mod.rs
crates/plugin3-cli/tests/: adr_drift.rs  cli_design_spec_drift.rs  cli_precedence_drift.rs  compaction_spec_drift.rs  end_to_end_smoke.rs  hooks_mod_drift.rs
crates/plugin3-core/: Cargo.toml  README.md
crates/plugin3-core/src/: atomic_write.rs  budget.rs  compaction.rs  cost.rs  detector.rs  error.rs  lib.rs  orchestrator.rs  paths.rs  report.rs  slicing.rs  store.rs  test_support.rs  text.rs
crates/plugin3-core/tests/: adr_xref_drift.rs  build_spec_drift.rs  compaction_fixtures.rs  cost_record_drift.rs  cost_reporting_spec_drift.rs  decide_fixtures.rs  detector_cache_drift.rs  detector_fixtures.rs  estimator_fixtures.rs  offload_store_spec_drift.rs  output_split_spec_drift.rs  readme_drift.rs  should_slice_fixtures.rs  size_budget.rs  slicing_orchestrator_spec_drift.rs  state_drift.rs  state_spec_drift.rs  store_drift.rs  token_budget_spec_drift.rs  tool_output_detector_spec_drift.rs
crates/plugin3-core/tests/fixtures/: decide.tsv  estimator.tsv  local_summarise.tsv  should_slice.tsv  store_keys.tsv
crates/plugin3-hosts/: Cargo.toml
crates/plugin3-hosts/src/: aider.rs  canonical.rs  claude_code.rs  cursor.rs  kirkforge.rs  lib.rs
npm/kirkforge-plugin/apps/plugin-cli/: Cargo.toml
npm/kirkforge-plugin/crates/kirkforge-plugin/: Cargo.toml
npm/kirkforge-plugin/crates/kirkforge-plugin-host/: Cargo.toml
(+495 files in other folders)
