[package]
name = "kirkforge"
version = "0.1.0"
edition = "2021"
description = "Native Ollama CLI coding agent — static binary, TUI, potato hardware"
repository = "https://github.com/KirkForge/KirkForge-Cli"
license = "MIT"
keywords = ["ai", "cli", "coding-agent", "ollama", "tui"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
kirkforge-plugin = { path = "crates/kirkforge-plugin" }
kirkforge-plugin-host = { path = "crates/kirkforge-plugin-host" }

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Ollama API)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Error handling
anyhow = "1"

# CLI args
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async trait support
async-trait = "0.1"

# Config
toml = "0.8"
directories = "6"

# System prompt templating
handlebars = "6"

# Diff display
similar = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Glob pattern matching
globset = "0.4"

# File system helpers
ignore = "0.4"
shellexpand = "3"

# Date/time for session IDs
chrono = { version = "0.4", features = ["serde"] }

# Text wrapping for chat display
textwrap = "0.16"

# Markdown rendering for assistant messages
pulldown-cmark = "0.13"

# Base64 for image-attach (read_image tool / multimodal messages)
base64 = "0.22"

# Clipboard for Ctrl+Shift+C copy
arboard = "3"

# Rust-native plugin SDK (vendored workspace members)
kirkforge-plugin = { workspace = true }
kirkforge-plugin-host = { workspace = true }

[dev-dependencies]
# Test-only: create real temporary files for @-mention expansion tests
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
