[package]
name = "kirkforge"
version = "0.3.0"
edition = "2021"
description = "Native Ollama CLI coding agent — static binary, TUI, potato hardware"
repository = "https://github.com/KirkForge/KirkForge-Cli"
license = "MIT"
keywords = ["ai", "cli", "coding-agent", "ollama", "tui"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = ["crates/*"]
# The test-doctor is a standalone prototype (see docs/ideas/test-doctor.md
# and ADR-0029). It is not part of the workspace build yet — build it
# explicitly with `cd crates/kirkforge-testdoctor && cargo build`.
exclude = ["crates/kirkforge-testdoctor"]
resolver = "2"

# Binary root lives at `src/main/mod.rs` (split into submodules for the
# event-emission / path-resolution seam). Cargo auto-detects `src/main.rs`
# but not the dir form, so point the `kirkforge` bin at it explicitly.
[[bin]]
name = "kirkforge"
path = "src/main/mod.rs"

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "first_token_latency"
harness = false

[workspace.dependencies]
kirkforge-plugin = { path = "crates/kirkforge-plugin" }
kirkforge-plugin-host = { path = "crates/kirkforge-plugin-host" }
kirkforge-lsp = { path = "crates/kirkforge-lsp" }
kirkforge-workflow = { path = "crates/kirkforge-workflow" }

[dependencies]
# TUI
ratatui = { version = "0.30", features = ["unstable"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Unix process control (setsid for background daemon detachment)
libc = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Ollama API)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Error handling
anyhow = "1"

# CLI args
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async trait support
async-trait = "0.1"

# Config
toml = "0.8"
directories = "6"

# System prompt templating
handlebars = "6"

# Line-mode history and editing
rustyline = "14"

# Diff display
similar = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Glob pattern matching
globset = "0.4"

# Regex for lightweight HTML-to-text stripping in web_fetch (kept small;
# the full html5ever/scraper path is intentionally deferred per ADR-0001).
regex = "1"

# File system helpers
ignore = "0.4"
shellexpand = "3"

# Date/time for session IDs
chrono = { version = "0.4", features = ["serde"] }

# Cron expression parsing for scheduled jobs
cron = "0.15"

# Text wrapping for chat display
textwrap = "0.16"

# Markdown rendering for assistant messages
pulldown-cmark = "0.13"

# Base64 for image-attach (read_image tool / multimodal messages)
base64 = "0.22"

# Clipboard for Ctrl+Shift+C copy
arboard = "3"

# Rust-native plugin SDK (vendored workspace members)
kirkforge-plugin = { workspace = true }
kirkforge-plugin-host = { workspace = true }
# LSP client pool (vendored workspace member) — symbol-aware code nav.
kirkforge-lsp = { workspace = true }
# Workflow engine (vendored workspace member) — programmable JSON workflows.
kirkforge-workflow = { workspace = true }
# Headless Chrome CDP driver for the computer_use tool.
headless_chrome = { version = "1", default-features = false }
# SigV4 signing for Anthropic-on-Bedrock requests.
aws-sigv4 = { version = "1", default-features = false, features = ["sign-http"] }
aws-credential-types = { version = "1.2", default-features = false }
aws-smithy-runtime-api = { version = "1.7.3", default-features = false }
futures-util = "0.3"
# SHA-256 hashing required by the custom SigV4 payload hash.
sha2 = "0.10"
hex = "0.4"
# Google OAuth2 / service-account access tokens for Anthropic-on-Vertex.
yup-oauth2 = { version = "12", default-features = false, features = ["hyper-rustls", "ring", "service-account"] }
# Re-exported by reqwest but also used directly for SigV4 request signing.
http = "1"
url = "2"
# Cache serialization uses serde_json (already a dependency) instead of
# the unmaintained bincode crate.

[dev-dependencies]
# Test-only: create real temporary files for @-mention expansion tests
tempfile = "3"
# Property-based testing for edit-file diff application and other invariants.
proptest = "1.6"
# Statistical benchmarking harness for first-token latency.
criterion = { version = "0.5", features = ["async_tokio"] }
# HTTP mock server for Ollama adapter integration tests without a live model.
wiremock = "0.6"

[features]
default = []
# Enable OpenTelemetry span/metric export from the Rust runtime.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dependencies.opentelemetry]
version = "0.29"
optional = true

[dependencies.opentelemetry-otlp]
version = "0.29"
optional = true
features = ["trace", "metrics", "grpc-tonic"]

[dependencies.opentelemetry_sdk]
version = "0.29"
optional = true
features = ["trace", "metrics", "rt-tokio"]

[dependencies.tracing-opentelemetry]
version = "0.30"
optional = true

[build-dependencies]
clap_mangen = "0.2"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
