[package]
name = "kirkforge-context-index"
version = "0.1.0"
edition = "2021"
description = "Tree-sitter-backed symbol/import/call-graph index for context retrieval"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
walkdir = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
