[package]
name = "kirkforge-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP client pool for KirkForge — symbol-aware code navigation for the model."

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"