[package]
name = "kirkforge-plugin-host"
version = "0.2.0"
edition = "2021"
description = "Runtime host for KirkForge plugins — registry, trust policy, and dispatch."

[dependencies]
kirkforge-plugin = { path = "../kirkforge-plugin" }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
