[package]
name = "kirkforge-plugin"
version = "0.2.0"
edition = "2021"
description = "SDK for authoring KirkForge plugins — manifest, trust tiers, and capabilities."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile.workspace = true
