[package]
name = "kirkforge-testdoctor"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "Test-performance doctor for Rust workspaces — profiles, classifies, and partitions the test suite for faster CI."

[[bin]]
name = "kirkforge-testdoctor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"