[package]
name = "kirkforge-video"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Instruction-driven video production CLI in Rust (OpenMontage feature parity, FFmpeg-native)"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"

[[bin]]
name = "kirkforge-video"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.26", features = ["derive"] }
which = "6"
tempfile = "3"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
