[package]
name = "kirkforge-video"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "Instruction-driven video production CLI in Rust (OpenMontage feature parity, FFmpeg-native)"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"

[[bin]]
name = "kirkforge-video"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.26", features = ["derive"] }
which = "6"
tempfile.workspace = true
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
