[package]
name = "kirkforge-workflow"
version = "0.1.0"
edition = "2021"
description = "Programmable JSON workflow engine for KirkForge — reusable multi-step coding pipelines."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
directories = "6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
