[package]
name = "kirkstratum-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "CLI for the Stratum context-compression pipeline"
keywords = ["compression", "llm", "context", "prompt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
kirkstratum-core = { path = "../kirkstratum-core" }
kirkstratum-hosts = { path = "../kirkstratum-hosts" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml.workspace = true
serde_json.workspace = true
serde.workspace = true
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
tempfile.workspace = true
predicates = "3"
