[package]
name = "kirkstratum-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "Context-compression toolkit for LLM prompts"
keywords = ["compression", "llm", "context", "prompt"]
categories = ["text-processing", "development-tools"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3 = "1"
toml.workspace = true

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression"
harness = false
