[package]
name = "plugin3-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "CLI for the Plugin3 budget assistant"

[[bin]]
name = "plugin3"
path = "src/main.rs"

[dependencies]
plugin3-core = { path = "../plugin3-core" }
plugin3-hosts = { path = "../plugin3-hosts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
