[package]
name = "plugin3-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "Core data model and persistence for the Plugin3 budget assistant"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
directories = "6"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
