[package]
name = "plugin3-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/KirkForge/KirkForge-Cli"
description = "Core data model and persistence for the Plugin3 budget assistant"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
directories.workspace = true
tempfile.workspace = true
chrono.workspace = true
blake3 = "1"
