[package]
name = "kirkforge-plugin-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for validating, listing, and scaffolding KirkForge plugins."

[[bin]]
name = "kirkforge-plugin"
path = "src/main.rs"

[dependencies]
kirkforge-plugin = { workspace = true }
kirkforge-plugin-host = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
