[package]
name = "kirkforge-plugin-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime host for KirkForge plugins — registry, trust policy, and dispatch."

[dependencies]
kirkforge-plugin = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
